packages/simile_compiler/src/mod/parser/parser.py
from __future__ import annotations
from dataclasses import dataclass, field
from typing import Callable, ClassVar, Any, NoReturn, TypeVar, Mapping
import inspect
from functools import wraps

from colorama import just_fix_windows_console
from termcolor import colored


from src.mod.scanner import Token, TokenType, scan
from src.mod import ast_

T = TypeVar("T")
A = TypeVar("A")
B = TypeVar("B")
just_fix_windows_console()


@dataclass
class ParseErr:
    """Class to represent a parser error."""

    message: str
    token: Token
    token_index: int
    offending_line: str
    derivation: list[str] = field(default_factory=list)

    def __str__(self) -> str:
        ret = ""
        ret += f"Error occurred on line {self.token.start_location.line}:"
        ret += f"\n{self.offending_line}\n"

        ret += " " * self.token.start_location.column
        if self.token.multiline():
            ret += colored("^...", "red")
        else:
            ret += colored("^" * (self.token.length() - 1), "red")

        ret += f"\nParseError for token {self.token} at parser index {self.token_index}:"
        ret += f"\n - {"\n - ".join(self.message.splitlines())}"
        ret += "\nDerivation: " + " -> ".join(self.derivation)
        return ret


class ParseException(Exception):
    """Used to enter panic mode (and should be recovered through the parser)"""

    pass


class ParseError(Exception):
    """Raised with all parse errors formatted as clear stdout output"""

    def __init__(self, parser: Parser):
        err_str = f"Failed to parse input, found {len(parser.errors)} error(s).\n"
        for err in parser.errors:
            err_str += f"{err}\n"

        err_str += "\nParser info:\n"
        err_str += f"Tokens: {len(parser.tokens)}\n"
        err_str += f"Errors: {len(parser.errors)}\n"
        err_str += f"Current index: {parser.current_index}\n"
        # Tried to limit the number of tokens to relevant areas, but doesnt really work
        # pre_tokens = ", ".join(list(map(str, parser.tokens[parser.current_index - 6 : parser.current_index - 1])))
        # cur_token = colored(parser.tokens[parser.current_index], "green")
        # post_tokens = ", ".join(list(map(str, parser.tokens[parser.current_index + 1 : parser.current_index + 6])))
        # err_str += f"Surrounding input tokens: {pre_tokens}, {cur_token}, {post_tokens}\n"
        # For debug
        err_str += f"Input tokens: {parser.tokens}\n"

        super().__init__(err_str)
        self.parser = parser

    pass


def store_derivation(func: Callable[..., T]) -> Callable[..., T]:
    """Decorator to store the derivation of the parse tree as a state in the parser."""

    @wraps(func)
    def wrapper(self: Parser, *args, **kwargs) -> Any:
        self.derivation.append(func.__name__)
        res = func(self, *args, **kwargs)
        self.derivation = self.derivation[:-1]  # Remove the last entry after the function call
        return res

    return wrapper


@dataclass
class Parser:
    """Parser class to handle parsing of tokens into an AST."""

    tokens: list[Token]
    original_text: str = ""  # Used only for error messages
    current_index: int = 0
    errors: list[ParseErr] = field(default_factory=list)
    derivation: list[str] = field(default_factory=list)

    # Idea: store the first sets and the corresponding functions (that would otherwise be "matched" when making decisions)
    # It may be nice to allow for nested first sets and then a lookup (using the idea of getting all leaves from a tree...)

    # Idea 2: store a mapping of production names -> first sets. first sets may include references to other productions
    # (ie. using strings instead of TokenTypes)
    first_sets: ClassVar[dict[str, set[str | TokenType]]] = {
        "start": {TokenType.EOF, "statements"},
        "statements": {TokenType.COMMENT, "simple_stmt", "compound_stmt"},
        "simple_stmt": {"expr", "assignment", "control_flow_stmt", "import_stmt"},
        "predicate": {"bool_quantification", "unquantified_predicate"},
        "bool_quantification": {TokenType.FORALL, TokenType.EXISTS},
        "ident_list": {"ident_pattern"},
        "ident_pattern": {TokenType.IDENTIFIER, TokenType.L_PAREN},
        "unquantified_predicate": {"implication"},
        "implication": {"impl", "rev_impl", "disjunction"},
        "impl": {"disjunction"},
        "rev_impl": {"disjunction"},
        "disjunction": {"conjunction"},
        "conjunction": {"negation"},
        "negation": {TokenType.NOT, "atom_bool"},
        "atom_bool": {TokenType.TRUE, TokenType.FALSE, TokenType.L_PAREN, "pair_expr"},
        "expr": {"quantification", "pair_expr", "predicate"},
        "quantification": {"lambdadef", "quantification_op"},
        "quantification_op": {TokenType.GENERAL_UNION, TokenType.GENERAL_INTERSECTION},
        "quantification_body": {"ident_list", "expr"},
        "lambdadef": {TokenType.LAMBDA},
        "pair_expr": {"rel_set_expr"},
        "rel_set_expr": {"set_expr"},
        "set_expr": {"interval_expr", "rel_expr"},
        "rel_expr": {"interval_expr"},
        "rel_sub_expr": {"range_modifier", TokenType.SET_DIFFERENCE},
        "range_modifier": {TokenType.RANGE_RESTRICTION, TokenType.RANGE_SUBTRACTION},
        "interval_expr": {"arithmetic_expr"},
        "arithmetic_expr": {"term"},
        "term": {"factor"},
        "factor": {TokenType.PLUS, TokenType.MINUS, "power"},
        "power": {"primary"},
        "primary": {"struct_access", "call", "image"},
        # "inversable_atom": {"atom"},
        "struct_access": {"atom"},
        "call": {"atom"},
        "image": {"atom"},
        "atom": {
            TokenType.IDENTIFIER,
            TokenType.L_PAREN,
            TokenType.INTEGER,
            TokenType.FLOAT,
            TokenType.STRING,
            TokenType.TRUE,
            TokenType.FALSE,
            TokenType.NONE,
            "collections",
            "builtin_functions",
        },
        "collections": {"set", "sequence", "bag"},  # handle relation inside the parsing function
        "set": {TokenType.L_BRACE},
        "sequence": {TokenType.L_BRACKET},
        "bag": {TokenType.L_DOUBLE_BRACKET},
        "builtin_functions": {TokenType.POWERSET, TokenType.NONEMPTY_POWERSET},  # , TokenType.CARDINALITY, TokenType.FIRST, TokenType.SECOND},
        "control_flow_stmt": {TokenType.RETURN, TokenType.BREAK, TokenType.CONTINUE, TokenType.SKIP},
        "assignment": {"struct_access"},
        "typed_name": {TokenType.IDENTIFIER},
        "compound_stmt": {
            "if_stmt",
            "for_stmt",
            "while_stmt",
            "record_stmt",
            # "enum_stmt",
            "procedure_stmt",
        },
        "if_stmt": {TokenType.IF},
        "else_stmt": {TokenType.ELSE},
        "for_stmt": {TokenType.FOR},
        "while_stmt": {TokenType.WHILE},
        "record_stmt": {TokenType.RECORD},
        # "enum_stmt": {TokenType.ENUM},
        "procedure_stmt": {TokenType.PROCEDURE},
        "block": {"simple_stmt", TokenType.INDENT},
        "import_stmt": {TokenType.IMPORT, TokenType.FROM},
        "import_name": {TokenType.DOT, TokenType.IDENTIFIER},
        "import_list": {TokenType.MULT, TokenType.IDENTIFIER, TokenType.L_PAREN},
        "flat_tuple_identifier": {TokenType.IDENTIFIER, TokenType.L_PAREN},
        "ident_list_item_non_maplet": {TokenType.IDENTIFIER, TokenType.L_PAREN},
    }

    @classmethod
    def get_first_set(cls, production_name: str) -> set[TokenType]:
        first_set = set()
        for elem in cls.first_sets[production_name]:
            if isinstance(elem, str):
                first_set |= cls.get_first_set(elem)
            else:
                first_set.add(elem)
        return first_set

    @property
    def eof(self) -> bool:
        return self.peek().type_ == TokenType.EOF

    def peek(self, offset: int = 0) -> Token:
        return self.tokens[self.current_index + offset]

    def advance(self) -> Token:
        """Advance to the next token."""
        if not self.eof:
            self.current_index += 1
        return self.peek(-1)

    def check(self, token_type: TokenType) -> bool:
        return not self.eof and self.peek().type_ == token_type

    def match(self, token_type: TokenType) -> bool:
        if self.check(token_type):
            self.advance()
            return True
        return False

    def consume(self, token_type: TokenType, msg: str) -> None:
        if not self.match(token_type):
            self.error(msg, expected_override_msg=f"Expected {token_type}, got {self.peek().type_}", level_offset=1)

    def error(self, msg: str, expected_override_msg: str = "", level_offset: int = 0) -> NoReturn:
        current_token = self.peek()
        msg_2 = expected_override_msg
        if not msg_2:
            msg_2 = f"Expected one of {self.get_first_set(inspect.stack()[1 + level_offset].function)}"
        self.errors.append(
            ParseErr(
                msg + f"\n{msg_2}",  # \nError originated from {inspect.stack()[1 + level_offset].function}"
                current_token,
                self.current_index,
                self.original_text.splitlines()[current_token.start_location.line],
                self.derivation,
            )
        )
        raise ParseException("Parse error - this error should be caught within the parser (otherwise, see self.errors)")

    def synchronize(self) -> None:
        """Skip tokens until we reach a token that can start a new statement."""
        first_set = self.get_first_set("compound_stmt")
        while not self.eof:
            if self.peek().type_ in first_set or self.peek().type_ == TokenType.NEWLINE:
                self.derivation = []
                return
            self.advance()

    def left_associative_optional_parse(
        self,
        func: Callable[[], A],
        tokens_and_types: Mapping[TokenType, Callable[[A | B, A], B]],
        default_left: A | None = None,
    ) -> A | B:
        left: A | B | None = default_left
        if left is None:
            left = func()

        while (t := self.peek()).type_ in tokens_and_types:
            self.advance()  # TODO check this?
            left = tokens_and_types[t.type_](left, func())
        return left

    # Parsing based (loosely) on the grammar in the specification
    @store_derivation
    def start(self) -> ast_.Start:
        if not self.tokens or self.eof:
            return ast_.Start(ast_.None_(), self.original_text)
        statements = self.statements()
        try:
            if not self.eof and self.peek().type_ != TokenType.NEWLINE and self.peek(1).type_ != TokenType.EOF:
                self.error(f"Unexpected token(s) after parsing statements (all tokens should be consumed by this point). Leftover tokens: {self.tokens[self.current_index :]}")
        except ParseException:
            pass
        return ast_.Start(statements, self.original_text)

    @store_derivation
    def statements(self) -> ast_.Statements:
        statements = []
        statements_first_set = self.get_first_set("statements")
        while self.peek().type_ in statements_first_set:
            try:
                if self.match(TokenType.COMMENT):
                    continue

                if self.peek().type_ in self.get_first_set("simple_stmt"):
                    statements.append(self.simple_stmt())
                elif self.peek().type_ in self.get_first_set("compound_stmt"):
                    statements.append(self.compound_stmt())
                else:
                    self.error("Unexpected statement starter")
            except ParseException:
                self.synchronize()

        return ast_.Statements(statements)

    @store_derivation
    def simple_stmt(self) -> ast_.SimpleStmt | ast_.ASTNode:
        t = self.peek()
        if t.type_ in self.get_first_set("expr"):
            expr = self.expr()
            if self.peek().type_ not in [TokenType.COLON, TokenType.ASSIGN, TokenType.CHOICE_ASSIGN]:
                self.consume(TokenType.NEWLINE, "Expected end of simple statement or assignment after parsing expression")
                return expr

            # now in assignment rule - could either see a type annotation or not
            if self.match(TokenType.COLON):
                type_ = self.expr()

                def replace_image_with_generic_type_(node: ast_.ASTNode | Any) -> ast_.ASTNode | None:
                    match node:
                        case ast_.Image(ast_.Identifier(_) as target, index):
                            return ast_.Type_(target, [index])
                    return None

                rewritten_type_ = ast_.Type_(type_.find_and_replace_with_func(replace_image_with_generic_type_))
                expr = ast_.TypedName(expr, rewritten_type_)

            if self.match(TokenType.CHOICE_ASSIGN):
                choice_assignment = True
            else:
                choice_assignment = False
                self.consume(TokenType.ASSIGN, "Expected assignment after an expression not ending with a newline")

            # Since first of assignment and expr are shared, check if next token is an assignment
            value = self.expr()
            self.consume(TokenType.NEWLINE, "Expected end of simple statement after assignment")

            # handle type restrictions, datatype refinements, etc.
            with_clauses = []
            if self.peek().type_ == TokenType.INDENT:
                self.advance()
                while not self.match(TokenType.DEDENT):
                    self.consume(TokenType.WITH, "Each refinement line in an assignment block must start with 'with'")
                    with_clauses.append(self.expr())
                    self.consume(TokenType.NEWLINE, "Expected newline after with clause expression")

            return ast_.Assignment(target=expr, value=value, with_clauses=with_clauses, choice_assignment=choice_assignment)
        if t.type_ in self.get_first_set("control_flow_stmt"):
            stmt = self.control_flow_stmt()
            self.consume(TokenType.NEWLINE, "Expected end of simple statement after control flow statement")
            return stmt
        if t.type_ in self.get_first_set("import_stmt"):
            stmt = self.import_stmt()
            self.consume(TokenType.NEWLINE, "Expected end of simple statement after import statement")
            return stmt
        self.error("Invalid start to simple_stmt")

    @store_derivation
    def predicate(self) -> ast_.Predicate | ast_.ASTNode:
        t = self.peek()
        match t.type_:
            case TokenType.FORALL:
                self.advance()
                ident_list = self.ident_list()
                if not self.match(TokenType.DOT):
                    self.consume(TokenType.CDOT, "Expected FORALL quantification separator")
                predicate = self.predicate()
                if not isinstance(predicate, ast_.ListOp):
                    predicate = ast_.And([predicate])

                forall = ast_.Forall(predicate)
                forall._bound_identifiers = set(ident_list.flatten_until_leaf_node())
                return forall
            case TokenType.EXISTS:
                self.advance()
                ident_list = self.ident_list()
                if not self.match(TokenType.DOT):
                    self.consume(TokenType.CDOT, "Expected EXISTS quantification separator")
                predicate = self.predicate()
                if not isinstance(predicate, ast_.ListOp):
                    predicate = ast_.And([predicate])

                exists = ast_.Exists(predicate)
                exists._bound_identifiers = set(ident_list.flatten_until_leaf_node())
                return exists
            case _ if t.type_ in self.get_first_set("unquantified_predicate"):
                return self.unquantified_predicate()
            case _:
                self.error("Predicate token not found")

    @store_derivation
    def ident_list(self) -> ast_.TupleIdentifier:
        ident_list_items = [self.ident_list_item()]
        while self.match(TokenType.COMMA):
            ident_list_items.append(self.ident_list_item())
        return ast_.TupleIdentifier(tuple(ident_list_items))

    @store_derivation
    def ident_list_item(self) -> ast_.IdentifierListTypes:
        return self.left_associative_optional_parse(
            self.ident_list_item_non_maplet,
            {
                TokenType.MAPLET: ast_.TupleIdentifier.from_maplet,
            },
        )

    @store_derivation
    def ident_list_item_non_maplet(self) -> ast_.IdentifierListTypes:
        match (t := self.advance()).type_:
            case TokenType.IDENTIFIER:
                item: ast_.IdentifierListTypes = ast_.Identifier(t.value)
            case TokenType.L_PAREN:
                self.advance()
                item = self.ident_list()
                self.consume(TokenType.R_PAREN, "Expected end to identifier item sub-list")
            case _:
                self.error("No identifier or sub-pattern found")
        return item

    @store_derivation
    def unquantified_predicate(self) -> ast_.ASTNode:
        return self.left_associative_optional_parse(
            self.implication,
            {
                TokenType.EQUIVALENT: ast_.Equivalent,
                TokenType.NOT_EQUIVALENT: ast_.NotEquivalent,
            },
        )

    @store_derivation
    def implication(self) -> ast_.ASTNode:
        disjunction = self.disjunction()
        while (t := self.peek()).type_ in [TokenType.IMPLIES]:
            self.advance()
            match t.type_:
                case TokenType.IMPLIES:
                    disjunction = ast_.Implies(disjunction, self.disjunction())
                # case TokenType.REV_IMPLIES:
                #     disjunction = ast_.RevImplies(disjunction, self.implication())
                case _:
                    self.error("Unreachable state")
        return disjunction

    @store_derivation
    def disjunction(self) -> ast_.ASTNode:
        conjunctions = [self.conjunction()]
        while self.match(TokenType.OR):
            conjunctions.append(self.conjunction())
        if len(conjunctions) == 1:
            return conjunctions[0]
        return ast_.Or(conjunctions)

    @store_derivation
    def conjunction(self) -> ast_.ASTNode:
        negation = [self.negation()]
        while self.match(TokenType.AND):
            negation.append(self.negation())
        if len(negation) == 1:
            return negation[0]
        return ast_.And(negation)

    @store_derivation
    def negation(self) -> ast_.ASTNode:
        if self.match(TokenType.NOT):
            return ast_.Not(self.negation())
        return self.atom_bool()

    @store_derivation
    def atom_bool(self) -> ast_.ASTNode:
        # if self.match(TokenType.TRUE):
        #     return ast_.True_()
        # if self.match(TokenType.FALSE):
        #     return ast_.False_()
        # if self.match(TokenType.L_PAREN):
        #     predicate = self.predicate()
        #     self.consume(TokenType.R_PAREN, "Missing closing parenthesis")
        #     return predicate
        pair_expr = self.pair_expr()
        match self.peek().type_:
            case TokenType.EQUALS:
                bin_op: type[ast_.BinaryOp] = ast_.Equal
            case TokenType.NOT_EQUALS:
                bin_op = ast_.NotEqual
            case TokenType.IS:
                bin_op = ast_.Is
            case TokenType.IS_NOT:
                bin_op = ast_.IsNot
            case TokenType.LT:
                bin_op = ast_.LessThan
            case TokenType.GT:
                bin_op = ast_.GreaterThan
            case TokenType.LE:
                bin_op = ast_.LessThanOrEqual
            case TokenType.GE:
                bin_op = ast_.GreaterThanOrEqual
            case TokenType.IN:
                bin_op = ast_.In
            case TokenType.NOT_IN:
                bin_op = ast_.NotIn
            case TokenType.SUBSET:
                bin_op = ast_.Subset
            case TokenType.SUBSET_EQ:
                bin_op = ast_.SubsetEq
            case TokenType.SUPERSET:
                bin_op = ast_.Superset
            case TokenType.SUPERSET_EQ:
                bin_op = ast_.SupersetEq
            case TokenType.NOT_SUBSET:
                bin_op = ast_.NotSubset
            case TokenType.NOT_SUBSET_EQ:
                bin_op = ast_.NotSubsetEq
            case TokenType.NOT_SUPERSET:
                bin_op = ast_.NotSuperset
            case TokenType.NOT_SUPERSET_EQ:
                bin_op = ast_.NotSupersetEq
            case _:
                return pair_expr  # Since comparison is optional, we can return immediately if no comp op matches
        self.advance()
        right = self.pair_expr()
        return bin_op(pair_expr, right)  # type: ignore # TODO fix type?

    @store_derivation
    def expr(self) -> ast_.ASTNode:
        t = self.peek()
        if t.type_ in self.get_first_set("quantification"):
            return self.quantification()
        if t.type_ in self.get_first_set("predicate"):
            return self.predicate()
        # if t.type_ in self.get_first_set("pair_expr"):
        # return self.pair_expr()
        self.error("Invalid start to expr")

    @store_derivation
    def quantification(self) -> ast_.ASTNode:
        t = self.advance()
        match t.type_:
            case TokenType.LAMBDA:
                params = ast_.TupleIdentifier(())
                if self.peek().type_ not in (TokenType.DOT, TokenType.CDOT):
                    params = self.flat_tuple_identifier()

                if not self.match(TokenType.DOT):
                    self.consume(TokenType.CDOT, "Expected LAMBDA quantification separator")
                predicate = self.predicate()
                self.consume(TokenType.VBAR, "Expected LAMBDA quantification predicate separator")
                return ast_.LambdaDef(params, predicate, self.expr())
            case TokenType.GENERAL_UNION:
                ident_list, predicate, expression = self.quantification_body()
                union_all = ast_.UnionAll(predicate, expression)
                union_all._bound_identifiers = set(ident_list.flatten_until_leaf_node())
                return union_all
            case TokenType.GENERAL_INTERSECTION:
                ident_list, predicate, expression = self.quantification_body()
                intersection_all = ast_.IntersectionAll(predicate, expression)
                intersection_all._bound_identifiers = set(ident_list.flatten_until_leaf_node())
                return intersection_all
            case _:
                self.error("Invalid start to quantification")

    @store_derivation
    def quantification_body(self) -> tuple[ast_.TupleIdentifier, ast_.ListOp, ast_.ASTNode]:
        # expr should cover the first entry in a list of identifiers,
        starting_index = self.current_index
        first_part = self.expr()
        # but in the case that we see a comma or single identifier list (via cdot),
        # backtrack and reparse as an identifier
        if self.peek().type_ in [TokenType.COMMA, TokenType.CDOT, TokenType.DOT]:
            self.current_index = starting_index
            first_part = self.ident_list()

        if self.match(TokenType.DOT) or self.match(TokenType.CDOT):
            predicate = self.predicate()
            if not isinstance(predicate, ast_.ListOp):
                predicate = ast_.And([predicate])

            self.consume(TokenType.VBAR, "Expected quantification predicate separator")
            expression = self.expr()
            if not isinstance(first_part, ast_.TupleIdentifier):
                self.error("Failed to parse quantification body - the identifier list in long form is not of type IdentList")
            return first_part, predicate, expression

        self.consume(TokenType.VBAR, "Expected quantification predicate separator (shorthand)")
        predicate = self.predicate()
        if not isinstance(predicate, ast_.ListOp):
            predicate = ast_.And([predicate])
        return ast_.TupleIdentifier(()), predicate, first_part

    @store_derivation
    def pair_expr(self) -> ast_.ASTNode:
        return self.left_associative_optional_parse(
            self.rel_set_expr,
            {TokenType.MAPLET: ast_.Maplet},
        )

    @store_derivation
    def rel_set_expr(self) -> ast_.ASTNode:
        set_expr = self.set_expr()
        match self.peek().type_:
            case TokenType.RELATION:
                bin_op: Callable[[ast_.ASTNode, ast_.ASTNode], ast_.RelationOp] = ast_.Relation
            case TokenType.TOTAL_RELATION:
                bin_op = ast_.TotalRelation
            case TokenType.SURJECTIVE_RELATION:
                bin_op = ast_.SurjectiveRelation
            case TokenType.TOTAL_SURJECTIVE_RELATION:
                bin_op = ast_.TotalSurjectiveRelation
            case TokenType.PARTIAL_FUNCTION:
                bin_op = ast_.PartialFunction
            case TokenType.TOTAL_FUNCTION:
                bin_op = ast_.TotalFunction
            case TokenType.PARTIAL_INJECTION:
                bin_op = ast_.PartialInjection
            case TokenType.TOTAL_INJECTION:
                bin_op = ast_.TotalInjection
            case TokenType.PARTIAL_SURJECTION:
                bin_op = ast_.PartialSurjection
            case TokenType.TOTAL_SURJECTION:
                bin_op = ast_.TotalSurjection
            case TokenType.BIJECTION:
                bin_op = ast_.Bijection
            case _:
                return set_expr
        self.advance()
        return bin_op(set_expr, self.rel_set_expr())
